TWC3119-602 - Generic Defect - Left Navigation Panel - Fixed issue when docked were it was not styled or aligned correctly (#2054)

--- a/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/lnav/lnav.component.css
@@ -511,10 +511,6 @@ kendo-tabstrip.gaming-tab .k-tabstrip-items-wrapper ul li.k-state-disabled {
     margin-top: 5px !important
 }
 
-lnavview .navIconLnk-small-wrapper {
-    top: 10px
-}
-
 .dialogmsg {
     text-align: center;
     font-family: 'Intel Clear' !important;
